# flac2aac

./: .gitignore  EXAMPLES.md  LICENSE  README.md  __init__.py  config.py  config.toml  encoder.py  flac2aac_gui.spec  gui.py  loudness.py  main.py  metadata.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  scanner.py
tests/: conftest.py  test_cli.py  test_config.py  test_encoder.py  test_loudness.py  test_loudness_rsgain.py  test_metadata.py  test_pipeline.py  test_scanner.py
