[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flac2aac"
version = "1.0.0"
description = "Convert FLAC files to AAC with metadata and loudness tagging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47.0",
    "r128gain>=1.0.7",
    "Pillow>=10.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
flac2aac = "main:main"

[project.optional-dependencies]
gui = ["customtkinter"]
dev = ["pytest>=7", "pyinstaller"]

[tool.ruff]
line-length = 100
