[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flac2aac"
version = "1.0.0"
description = "Convert FLAC files to AAC with metadata and loudness tagging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47.0",
    "Pillow>=10.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
# ReplayGain analysis requires the rsgain system binary (not a Python package).
# Install: brew install rsgain  /  apt install rsgain
# https://github.com/complexlogic/rsgain

[project.scripts]
flac2aac = "main:main"

[project.optional-dependencies]
gui = ["pyinstaller>=6.0"]
dev = ["pytest>=7", "pyinstaller"]

[tool.setuptools]
# Flat layout with multiple top-level modules; setuptools auto-discovery
# cannot handle this, so list them explicitly.
py-modules = [
    "main",
    "config",
    "scanner",
    "encoder",
    "metadata",
    "loudness",
    "pipeline",
]

[tool.ruff]
line-length = 100
